--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn React</title>
     <link rel="stylesheet" href="index.css"/>
+
+    <!-- don't use cdn
+    <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body>
+
+    <!-- using taiwind -->
+    <h1 class="font-bold text-xl text-red-900">Hello there!!</h1>
+
     <div id="root">
         Not Rendered
     </div>
